--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:16.14-alpine
 WORKDIR /app-backend
-COPY package*.json .
+COPY ./backend/package*.json ./backend/
 RUN npm install
 COPY . .
 CMD ["npm", "start"]
-
