--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:16.14-alpine
 WORKDIR /app-frontend
-COPY package*.json .
+COPY ./frontend/package*.json ./frontend/
 RUN npm install
 COPY . .
 CMD ["npm", "start"]
+
