Feat: Requisitos 3 ao 12 excluindo teste

--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:16.14-alpine
 WORKDIR /app-backend
-COPY . .
+COPY package* ./
 RUN npm install
-CMD ["npm", "start"]
+COPY . .
+CMD [ "npm", "start" ]
+
