--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:16.14-alpine
 WORKDIR /app-frontend
-COPY . .
+COPY package* ./
 RUN npm install
-CMD ["npm", "start"]
+COPY . .
+CMD [ "npm", "start" ] 
 
